# rte_project_openaas

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt
AASCrawler/: CMakeLists.txt
AASCrawler/source/: AASCrawlerC.c
DSServices/: CMakeLists.txt
DSServices/include/: service_helper.h
DSServices/source/: DSRegistrationServiceTypeSQLC.c  DSSearchServiceType1.c  DSSearchServiceType2.c  DSSearchServiceTypeSQLC.c  DSSecurityServiceType1.c  DSSecurityServiceTypeSQLC.c  DSUnregistrationServiceType1.c  DSUnregistrationServiceTypeSQLC.c
Databases/: CMakeLists.txt
Databases/source/: SQLC.c  SQLite3_Class.c
identification/: CMakeLists.txt
identification/source/: Class_Identification.c  identification_helpers.c
identificationOPCUAInterface/: CMakeLists.txt
lifeCycleEntry/: CMakeLists.txt
lifeCycleEntryOPCUAInterface/: CMakeLists.txt
opcuaSubscription/: CMakeLists.txt
opcuaSubscription/source/: Factory.c  (+5 more)
openAASDiscoveryServer/: CMakeLists.txt
openAASDiscoveryServerHTTP/: CMakeLists.txt
openaas/: CMakeLists.txt
openaasHTTP/: CMakeLists.txt
openaasOPCUAInterface/: CMakeLists.txt
propertyValueStatement/: CMakeLists.txt
propertyValueStatementOPCUAInterface/: CMakeLists.txt
services/: CMakeLists.txt
servicesOPCUAInterface/: CMakeLists.txt
subModelAdministration/: CMakeLists.txt
subModelAdministrationOPCUAInterface/: CMakeLists.txt
subModelDiscovery/: CMakeLists.txt
subModelDiscoveryOPCUAInterface/: CMakeLists.txt
subModelLifeCycleEntry/: CMakeLists.txt
subModelLifeCycleEntryOPCUAInterface/: CMakeLists.txt
subModelSendMessage/: CMakeLists.txt
subModelSendMessageOPCUAInterface/: CMakeLists.txt
(+112 files in other folders)
